[package]
name = "ml"
version = "0.1.0"
authors = ["TatriX <tatrics@gmail.com>"]
edition = "2018"

[[bin]]
name = "lhr"
path = "src/main.rs"

[dependencies]
lighthouse = { git = "https://github.com/finnkauski/lighthouse" }
prettytable-rs = "0.8.0"
rustyline = "6.0.0"
log = "0.4.8"
env_logger = "0.7.1"
dirs = "2.0.2"
palette = "0.5.0"
ansi_term = "0.12.1"
